--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "traverse": "^0.6.7"
+    "@types/node": "16.x",
+    "traverse": "^0.6.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
