--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "private": false,
+  "engines": {
+    "pnpm": "7.x",
+    "node": "18.x"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pl:traverse": "ts-node ./src/traverse"
   },
   "keywords": [],
   "author": "",
