--- a/.devcontainer/blub.json/devcontainer.json
+++ b/.devcontainer/blub.json/devcontainer.json
@@ -28,7 +28,9 @@
     "davidanson.vscode-markdownlint",
     "bierner.markdown-preview-github-styles",
     "streetsidesoftware.code-spell-checker",
-    "alistairchristie.open-reusables"
+    "alistairchristie.open-reusables",
+    "Vue.vscode-typescript-vue-plugin",
+    "Vue.volar"
   ],
 
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
